objects/tc9_ti__Time_Sheet_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Break_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Break Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Break_End_Time__c</fullName>
        <defaultValue>&quot;00:00&quot;</defaultValue>
        <label>Break End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Start_Time__c</fullName>
        <defaultValue>&quot;00:00&quot;</defaultValue>
        <label>Break Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missed_Break_Reason__c</fullName>
        <label>Missed Break Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I_waived_my_meal_break</fullName>
                    <label>1. I waived my meal break</label>
                </value>
                <value>
                    <fullName>I_was_not_offered_a_meal_break</fullName>
                    <label>2. I was not offered a meal break</label>
                </value>
                <value>
                    <fullName>3. I was denied a meal break</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_popup__c</fullName>
        <label>test popup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>